# Void_Contingency

./: .clang-format  .gitignore  CMakeLists.txt  GDD.txt  README.md  test.cpp
assets/: README.md
docs/: GDD.md  action_plan.md  breakdown.md
docs/phase_one/: 1.1_development_environment.md  1.2_project_structure.md  1.3_core_systems.md
docs/phase_two/: README.md
docs/phase_two/game_loop/: combat_framework.md  event_system.md  exploration.md  game_loop_implementation.md  input_system.md  resource_management.md  sector_generation.md  state_management.md  upgrade_system.md
docs/phase_two/ship_system/: basic_ship_class.md  collision_system.md  component_system.md  movement_system.md  vector_math.md  visualization.md
docs/phase_two/ui_framework/analytics/: analytics_system.md
docs/phase_two/ui_framework/clipping/: clipping_compression.md  clipping_debugging.md  clipping_masking.md  clipping_optimizations.md  clipping_serialization.md  nested_clipping.md
docs/phase_two/ui_framework/components/: component_animations.md  post_processing.md  ui_components.md
docs/phase_two/ui_framework/core/: component_rendering.md  layout_management.md  styling_system.md  ui_component_system.md
docs/phase_two/ui_framework/gestures/: gesture_analysis.md  gesture_analytics.md  gesture_collaboration.md  gesture_customization.md  gesture_export_import.md  gesture_optimization.md  gesture_recognition.md  gesture_recording.md  gesture_sharing.md  gesture_templates.md  gesture_training.md  gesture_validation.md  gesture_visualization.md
docs/phase_two/ui_framework/hud/: hud_analytics.md  hud_animations.md  hud_benchmarking.md  hud_debugging.md  hud_elements.md  hud_input_handling.md  hud_optimization.md  hud_persistence.md  hud_profiling.md  hud_sharing.md  hud_state_management.md  hud_styling.md  hud_system.md  hud_testing.md  hud_transitions.md
docs/phase_two/ui_framework/input/: input_gestures.md  input_handling.md
docs/phase_two/ui_framework/menu/: menu_analytics.md  menu_benchmarking.md  menu_components.md  menu_debugging.md  menu_input_handling.md  menu_navigation.md  menu_optimization.md  menu_persistence.md  menu_profiling.md  menu_sharing.md  menu_state_management.md  menu_system.md  menu_testing.md  menu_transitions.md
docs/phase_two/ui_framework/optimization/: performance_optimization.md
docs/phase_two/ui_framework/theme/: theme_system.md
include/: README.md
include/core/: Component.hpp  Config.hpp  Engine.hpp  Event.hpp  EventManager.hpp  Game.hpp  Resource.hpp  ResourceManager.hpp  Transform.hpp  Vector2f.hpp
include/game/ship/: Ship.hpp
include/game/ship/components/: ComponentTypes.hpp  EngineComponent.hpp  MovementComponent.hpp  ShipComponent.hpp
include/graphics/: Renderer.hpp
include/input/: InputSystem.hpp
include/utils/: Logger.hpp
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: README.md  build.ps1  build.sh  diagnose_sdl.cmake
src/: CMakeLists.txt  README.md  main.cpp
src/core/: CMakeLists.txt  Config.cpp  Engine.cpp  EventManager.cpp  Game.cpp  README.md  ResourceManager.cpp
src/game/: CMakeLists.txt  README.md
src/game/ship/: Ship.cpp
src/game/ship/components/: EngineComponent.cpp  MovementComponent.cpp  ShipComponent.cpp
src/graphics/: CMakeLists.txt  Color.cpp  Color.hpp  README.md  Renderer.cpp  Renderer.hpp  Sprite.cpp  Sprite.hpp
src/input/: CMakeLists.txt  InputSystem.cpp  README.md
src/network/: CMakeLists.txt  README.md
src/physics/: CMakeLists.txt  README.md
src/ui/: CMakeLists.txt  README.md
src/utils/: CMakeLists.txt  Logger.cpp  README.md
tests/: CMakeLists.txt  README.md
tests/unit/: main.cpp
tests/unit/core/: GameTest.cpp  example_test.cpp
tests/unit/game/ship/: Ship.cpp
tests/unit/game/ship/components/: EngineComponent.cpp  MovementComponent.cpp
